cloudformation.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: AWS Single-node Kubernetes Stack
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Instance configuration
        Parameters:
          - InstanceType
          - KeyName

      - Label:
          default: Network configuration
        Parameters:
          - HostedZone
          - VpcId
          - SubnetId1
          - SubnetId2
          - SubnetId3

      - Label:
          default: Security configuration
        Parameters:
          - AdminCIDR

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair in the region, to enable SSH access to the instance.
    Type: AWS::EC2::KeyPair::KeyName

  InstanceType:
    Description: Instance type
    Type: String
    Default: m4.large

  HostedZone:
    Type: String
    Description: Route53 zone for the DNS records.
    AllowedPattern: "^[a-z0-9][a-z0-9-\\.]+[a-z0-9]$"
    ConstraintDescription: Domain name only, no trailing dot.

  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VpcId of your existing Virtual Private Cloud (VPC)

  SubnetId1:
    Type: AWS::EC2::Subnet::Id
    Description: SubnetId in the above VPC

  SubnetId2:
    Type: AWS::EC2::Subnet::Id
    Description: SubnetId in the above VPC

  SubnetId3:
    Type: AWS::EC2::Subnet::Id
    Description: SubnetId in the above VPC

  AdminCIDR:
    Description: IP/Mask which will be allowed for HTTP and SSH access.
    Type: String
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: Secured ip must be valid IPv4 CIDR address for example 192.168.0.1/32

Mappings:
  AWSRegionAMI:
    ap-southeast-2:
      '64': ami-08bd00d7713a39e7d       # CentOS Linux 7 x86_64 HVM EBS ENA

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "${AWS::StackName} instance security group"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref AdminCIDR
      - IpProtocol: tcp
        FromPort: 6443
        ToPort: 6443
        CidrIp: !Ref AdminCIDR
      Tags:
      - Key: !Sub "kubernetes.io/cluster/${AWS::StackName}"
        Value: owned

  InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      Policies:
      - PolicyName: InstancePolicy
        PolicyDocument:
          Version: 2012-10-17
          Statement:
            - Effect: Allow
              Action:
              - ec2:*
              - elasticloadbalancing:*
              - ecr:GetAuthorizationToken
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:GetRepositoryPolicy
              - ecr:DescribeRepositories
              - ecr:ListImages
              - ecr:BatchGetImage
              - route53:GetHostedZone
              - route53:ListHostedZones
              - route53:ListHostedZonesByName
              - route53:ChangeResourceRecordSets
              - route53:ListResourceRecordSets
              - route53:GetChange
              Resource:
              - "*"

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref InstanceRole

  InstanceEip:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref Instance

  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap
        - AWSRegionAMI
        - !Ref AWS::Region
        - 64
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      Monitoring: true
      DisableApiTermination: false
      IamInstanceProfile: !Ref InstanceProfile
      NetworkInterfaces:
      - GroupSet:
        - !GetAtt InstanceSecurityGroup.GroupId
        AssociatePublicIpAddress: true
        DeviceIndex: 0
        DeleteOnTermination: true
        SubnetId: !Ref SubnetId1
      BlockDeviceMappings:
      - DeviceName: "/dev/sda1"
        Ebs:
          VolumeType: "gp2"
          DeleteOnTermination: "true"
          VolumeSize: "50"
      UserData:
        Fn::Base64: !Sub |-
          #cloud-config
          timezone: Pacific/Auckland
          hostname: ${AWS::StackName}.${HostedZone}.
          preserve_hostname: false
          ssh_pwauth: True
          runcmd:
          - yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
          - yum install -y git
          # AWS-CLI installation
          - curl -O https://bootstrap.pypa.io/get-pip.py
          - python get-pip.py
          - pip install awscli
          - aws configure set default.region ${AWS::Region}
          # Install Kubernetes
          - git clone https://github.com/mludvig/aws-k8s-single-node.git
          - pushd aws-k8s-single-node
          - ./install-kubernetes.sh ${AWS::StackName}.${HostedZone}
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
      - Key: !Sub "kubernetes.io/cluster/${AWS::StackName}"
        Value: owned

  DnsRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Sub "${HostedZone}."
      Name: !Sub "${AWS::StackName}.${HostedZone}."
      ResourceRecords:
        - !Ref InstanceEip
      TTL: 900
      Type: A

Outputs:
  DnsRecord:
    Value: !Ref DnsRecord

  PrivateIp:
    Value: !Ref Instance.PrivateIp

  PublicIp:
    Value: !Ref InstanceEip
